[tool.poetry]
name = "hanoi"
version = "0.1.0"
description = ""
authors = ["mi92 <michael.d.moor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.0.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
